最新房源页面

--- a/common/aside.html
+++ b/common/aside.html
@@ -16,9 +16,9 @@
       <div class="fy_title title"><span class="icon_fy" style="float:left;"></span><strong>我的房源</strong>
           <span class="aside_plus" style=""><a href="../house_info/release_intro.html" target="center">+发布</a></span>
       </div>
-      <div><a href="../house_info/my_query.html" target="_top">我查看的房源</a></div>
+      <div><a href="../house_info/my_queryOld.html" target="_top">我查看的房源</a></div>
       <div><a href="../house_info/my_release.html" target="_top">我发布的房源</a></div>
-      <div><a href="../house_info/my_favor.html"  target="_top">我收藏的房源</a></div>
+      <div><a href="../house_info/my_favorOld.html" target="_top">我收藏的房源</a></div>
     </div>
     <div class="ky  module">
       <div class="ky_title title"><span class="icon_ky" style="float:left;" ></span><strong>我的房源征集</strong><span class="aside_plus"><a href="../collect/release.html" target="center">+发布</a></span></div>
