--- a/common/center.html
+++ b/common/center.html
@@ -38,9 +38,9 @@
                 <span class="aside_plus"><a id="addHouseInfo" href="../house_info/release_intro.html"
                                             target="main">+发布</a></span>
             </div>
-            <div><a href="../house_info/my_query.html" target="_top">我查看的房源</a></div>
+            <div><a href="../house_info/my_queryOld.html" target="_top">我查看的房源</a></div>
             <div><a href="../house_info/my_release.html" target="_top">我发布的房源</a></div>
-            <div><a href="../house_info/my_favor.html" target="_top">我收藏的房源</a></div>
+            <div><a href="../house_info/my_favorOld.html" target="_top">我收藏的房源</a></div>
         </div>
 
         <div class="ky  module">
