--- a/common/head.html
+++ b/common/head.html
@@ -53,7 +53,7 @@
                     <li class="active"><a href="index.html">主页</a></li>
                     <li ><a href="about.html">联系我们</a></li>
                     <li><a href="house_info/list-table.html">有效房源</a></li>
-                    <li><a href="portfolio.html">最新房源</a></li>
+                    <li><a href="house_info/list-table.html?type=new">最新房源</a></li>
                     <li><a href="pricing.html">物业查询</a></li>
                     <li><a href="index.html#personal">个人中心</a></li>
                     <li>
