--- a/finance/rechargeV2.html
+++ b/finance/rechargeV2.html
@@ -4,8 +4,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>大公盘</title>
 
-
-
 	<!-- core CSS -->
 	<link href="../resources/tpgd/css/bootstrap.min.css" rel="stylesheet">
 	<link href="../resources/tpgd/css/font-awesome.min.css" rel="stylesheet">
@@ -28,13 +26,12 @@
 	<script src="../resources/js/common/head.js"></script>
 
 	<script type="text/javascript" src="../resources/tpgd/js/bootstrap.min.js"></script>
-	<!--<script type="text/javascript" src="./resources/tpgd/js/jquery.prettyPhoto.js"></script>-->
 	<script type="text/javascript" src="../resources/tpgd/js/jquery.isotope.min.js"></script>
 	<script type="text/javascript" src="../resources/tpgd/js/owl.carousel.js"></script>
 	<script type="text/javascript" src="../resources/tpgd/js/main.js"></script>
 	<script type="text/javascript" src="../resources/layer/layer.js"></script>
-
-<!--<script type="text/javascript" src="../resources/js/finance/recharge.js"></script>-->
+	<script type="text/javascript" src="../resources/js/validate/jquery.validate.min.js"></script>
+<script type="text/javascript" src="../resources/js/finance/recharge.js"></script>
 
 </head>
 <body>
@@ -50,7 +47,7 @@
 						<li class="active"><a href="../index.html">主页</a></li>
 						<li><a href="../about.html">联系我们</a></li>
 						<li><a href="../house_info/list-table.html">有效房源</a></li>
-						<li><a href="../portfolio.html">最新房源</a></li>
+						<li><a href="../house_info/list-table.html?type=new">最新房源</a></li>
 						<li><a href="../pricing.html">物业查询</a></li>
 						<li><a href="../index.html#personal">个人中心</a></li>
 						<li>
@@ -131,7 +128,6 @@
 							</div>
 						</div>
 					</div>
-
 
 					<input type="submit" id="txt_sub" class="btn btn-primary" value="提交"/>
 				</form>
