--- a/house_info/my_release.html
+++ b/house_info/my_release.html
@@ -64,9 +64,9 @@
                 <div class="main_R_nav">
                     <ul>
                         <li class="list_head "><a href="list.html">数据列表</a></li>
-                        <li class="list_head about"><a href="my_query.html">我查看的房源</a></li>
+                        <li class="list_head about"><a href="my_queryOld.html">我查看的房源</a></li>
                         <li class="main_R_nav_current list_head about "><a href="my_release.html">我发布的房源</a></li>
-                        <li class="list_head about"><a href="my_favor.html">我收藏的房源</a></li>
+                        <li class="list_head about"><a href="my_favorOld.html">我收藏的房源</a></li>
                     </ul>
                 </div>
 
