--- a/house_info/release.html
+++ b/house_info/release.html
@@ -53,7 +53,7 @@
 <div class="main">
 
 	<div class="position">
-			<div>当前位置:<a href="release115.html"></a><a href="">发布房源数据</a></div>
+			<div>当前位置:<a href="release.html"></a><a href="">发布房源数据</a></div>
 	</div>
 	<div class="container_title">
 		<h2>发布房源数据<span id="areaAllowedSpan"></span></h2>
