--- a/house_info/release_center.html
+++ b/house_info/release_center.html
@@ -22,7 +22,7 @@
 <div class="main">
       <div class="aside" style="float:left;">
     <div class="fy  module">
-      <div class="fy_title title"><span class="icon_fy" style="float:left;"></span><strong>我的房源</strong><span class="aside_plus"><a href="release115.html" target="main">+发布</a></span></div>
+      <div class="fy_title title"><span class="icon_fy" style="float:left;"></span><strong>我的房源</strong><span class="aside_plus"><a href="release.html" target="main">+发布</a></span></div>
       <div><a href="../house_info/list.html?type=1" target="_top">我查看的房源</a></div>
       <div><a href="../house_info/list.html?type=2" target="_top">我发布的房源</a></div>
       <div><a href="../house_info/list.html?type=3"  target="_top">我收藏的房源</a></div>
