--- a/house_info/release_intro.html
+++ b/house_info/release_intro.html
@@ -42,7 +42,7 @@
 									<li>⑤ 用户发布自定义酬劳房源所得收益，其中30%将归系统所有。</li>
 								</ul>
 							</div>
-							<div class="data_btn"><a href="release115.html" >发布房源数据</a></div>
+							<div class="data_btn"><a href="release.html" >发布房源数据</a></div>
 						</div>
 					</div>
 					<div class="fixed">
@@ -70,7 +70,7 @@
 
 
 
-							<div class="data_btn"><a href="release115.html?type=1">发布房源数据</a></div>
+							<div class="data_btn"><a href="release.html?type=1">发布房源数据</a></div>
 						</div>
 						
 					</div>
