--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <li class="active"><a href="index.html">主页</a></li>
                     <li><a href="about.html">联系我们</a></li>
                     <li><a href="house_info/list-table.html">有效房源</a></li>
-                    <li><a href="portfolio.html">最新房源</a></li>
+                    <li><a href="house_info/list-table.html?type=new">最新房源</a></li>
                     <li><a href="pricing.html">物业查询</a></li>
                     <li><a href="#personal">个人中心</a></li>
                     <li>
@@ -169,7 +169,7 @@
                         <div class="recent-work-inner">
                             <h3><a href="#">充值</a></h3>
                             <p>目前，我们暂提供微信充值方式。</p>
-                            <a class="preview " href="finance/rechargeV2.html" rel="prettyPhoto" title="">
+                            <a class="preview " href="finance/rechargeV2.html"  title="充值">
                                 <i class="fa fa-search"></i> 查看</a>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                         <div class="recent-work-inner">
                             <h3><a href="#"> 充值记录</a></h3>
                             <p>您在我要查房的所有充值的记录.</p>
-                            <a class="preview rechargeAll" href="javascript:void(0);" rel="prettyPhoto"><i class="fa fa-search"></i> 查看</a></div>
+                            <a class="preview " href="finance/recharge_all.html" ><i class="fa fa-search"></i> 查看</a></div>
                     </div>
                 </div>
             </div>
