--- a/finance/recharge_all.html
+++ b/finance/recharge_all.html
@@ -1,120 +1,111 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-<title></title>
-	<link href="../resources/tpgd/css/bootstrap.min.css" rel="stylesheet">
-<!--<link rel="stylesheet" type="text/css" href="../resources/css/finance/recharge.css"/>-->
-<!--<link rel="stylesheet" type="text/css" href="../resources/css/global.css"/>-->
-<!--<link rel="stylesheet" type="text/css" href="../resources/css/clear.css"/>-->
-<link rel="stylesheet" type="text/css" href="../resources/css/pager.css"/>
-<script type="text/javascript" src="../resources/js/jquery-1.10.1.min.js"></script>
-<script type="text/javascript" src="../resources/js/common.js"></script>
-<script type="text/javascript" src="../resources/js/jquery.pager.js"></script>
-<script type="text/javascript" src="../resources/js/Calendar.js"></script>
-<script type="text/javascript" src="../resources/js/validate/jquery.validate.min.js"></script>
-<script type="text/javascript" src="../resources/js/validate/messages_cn.js"></script>
-<script type="text/javascript" src="../resources/js/finance/recharge.js"></script>
-<!--<link href="../resources/css/date_css/date.css" rel="stylesheet" type="text/css">-->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>充值记录</title>
 
-	<script type="text/javascript" src="../resources/dataTables/media/js/jquery.dataTables.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="../resources/dataTables/media/css/jquery.dataTables.min.css">
+    <link href="../resources/tpgd/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/prettyPhoto.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/main.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/responsive.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/owl.carousel.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/owl.theme.css" rel="stylesheet">
+
+    <link href="../resources/layer/skin/layer.css" rel="stylesheet">
+    <link href='http://fonts.useso.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <script src="../resources/js/jquery-1.10.1.min.js"></script>
+    <script src="../resources/js/common.js"></script>
+    <script src="../resources/js/common/head.js"></script>
+
+    <script type="text/javascript" src="../resources/tpgd/js/bootstrap.min.js"></script>
+
+
+
+    <script type="text/javascript" src="../resources/dataTables/media/js/jquery.dataTables.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../resources/dataTables/media/css/jquery.dataTables.min.css">
+
+    <script type="text/javascript" src="../resources/js/finance/rechargeList.js"></script>
 </head>
 <body>
 
-<!--<div class="course" style=""><img src="../resources/images/course.jpg" alt="" /></div>-->
+<header id="header" >
+    <nav class="navbar navbar-inverse" role="banner">
+        <div class="container">
+            <div class="navbar-header" class="">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="sr-only">Toggle navigation</span> <span
+                        class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
+                <a class="navbar-brand" href="index.html"><i class="fa fa-sun-o"></i> 我要查房</a></div>
+            <div class="collapse navbar-collapse navbar-right">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="../index.html">主页</a></li>
+                    <li><a href="../about.html">联系我们</a></li>
+                    <li><a href="../house_info/list-table.html">有效房源</a></li>
+                    <li><a href="../house_info/list-table.html?type=new">最新房源</a></li>
+                    <li><a href="../pricing.html">物业查询</a></li>
+                    <li><a href="../index.html#personal">个人中心</a></li>
+                    <li>
+                        <div class="part1" style="display:none ">
+                            <a href="../login.html" target="_top">登录/注册</a>
+                        </div>
 
-	<div class="container">
+                        <div class="part2" style="display:none ">
+                            <span id="testId">欢迎您，</span><span class="user"></span>
+                            <span class="btn btn-warning exit">退出</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
 
-			<!--<div class="container_top">-->
-				<!--<div class="recharge">-->
-					<!--<div class="recharge_current recharge_record">充值记录</div>-->
-				<!--</div>-->
-			<!--</div>-->
+<div class="container">
 
-			<!--<div div="date">            -->
-				<!--<form id="recharge_record_form">-->
-				   <!--<div class="demos">-->
-				   <!--<span style="margin-top:4px;"><img src="../resources/images/search.png" alt="" /></span>-->
-					<!--<span>起止时间▼<input name="beginDate" type="text" id="beginDate"  onClick="new Calendar().show(this);" readonly="readonly" />		</span>-->
-					<!--<span>至▼<input name="endDate" type="text" id="endDate"  onClick="new Calendar().show(this);" readonly="readonly"/></span>-->
-				   <!--</div>-->
+    <!--<div class="container_top">-->
+    <!--<div class="recharge">-->
+    <!--<div class="recharge_current recharge_record">充值记录</div>-->
+    <!--</div>-->
+    <!--</div>-->
 
-				   <!--<input type="hidden" name="pageNumber" id="pageNumber" value="1" />-->
-				   <!--<input type="hidden" name="pageSize" id="pageSize" value="5" />-->
-					<!--<input type="hidden" name="orderBy" id="orderBy"/>-->
-					<!--<input type="hidden" name="orderType" id="order"/> -->
-				    <!--<input type="button" value="搜索" id="search">-->
-				<!--</form>-->
-			<!--</div>-->
-				<div class="table-responsive">
-					<table id="example" class="table" border="0" cellpadding="0" cellspacing="0">
-					<thead>
-						<tr>
-							<th align=left>&nbsp;&nbsp;&nbsp;充值时间</th>
-							<th >充值金额</th>
-							<th >充值状态</th>
-							<!--<th>可用余额</th>-->
-							<th>充值方式</th>
-						</tr>
-					</thead>
-					<tbody>
+    <!--<div div="date">            -->
+    <!--<form id="recharge_record_form">-->
+    <!--<div class="demos">-->
+    <!--<span style="margin-top:4px;"><img src="../resources/images/search.png" alt="" /></span>-->
+    <!--<span>起止时间▼<input name="beginDate" type="text" id="beginDate"  onClick="new Calendar().show(this);" readonly="readonly" />		</span>-->
+    <!--<span>至▼<input name="endDate" type="text" id="endDate"  onClick="new Calendar().show(this);" readonly="readonly"/></span>-->
+    <!--</div>-->
 
-					<tr>
-						<td>Tatyana Fitzpatrick</td>
-						<td>Regional Director</td>
-						<td>2010/03/17</td>
-						<td>$385,750</td>
-					</tr>
-					<tr>
-						<td>Michael Silva</td>
-						<td>Marketing Designer</td>
-						<td>2012/11/27</td>
-						<td>$198,500</td>
-					</tr>
-					<tr>
-						<td>Paul Byrd</td>
-						<td>Chief Financial Officer (CFO)</td>
-						<td>2010/06/09</td>
-						<td>$725,000</td>
-					</tr>
+    <!--<input type="hidden" name="pageNumber" id="pageNumber" value="1" />-->
+    <!--<input type="hidden" name="pageSize" id="pageSize" value="5" />-->
+    <!--<input type="hidden" name="orderBy" id="orderBy"/>-->
+    <!--<input type="hidden" name="orderType" id="order"/> -->
+    <!--<input type="button" value="搜索" id="search">-->
+    <!--</form>-->
+    <!--</div>-->
+    <div class="table-responsive">
+        <table id="rechargeTable" class="stripe cell-border" width="100%">
+            <thead>
+            <tr>
+                <th align=left>&nbsp;&nbsp;&nbsp;充值时间</th>
+                <th>充值金额</th>
+                <th>充值状态</th>
+                <!--<th>可用余额</th>-->
+                <th>充值方式</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
 
-					</tbody>
-				</table>
-			</div>
-
-	</div>
-
-
-
-	<script>
-		$(function(){
-			$('#example').dataTable({
-				"language": {
-					"paginate": {
-						"first":      "首页",
-						"last":       "末页",
-						"next":       "下一页",
-						"previous":   "上一页"
-					},
-					"lengthMenu": "每页 _MENU_ 条记录",
-					"zeroRecords": "没有找到记录",
-					"info": "第 _PAGE_ 页 ( 总共 _PAGES_ 页 )",
-					"infoEmpty": "无记录",
-					"infoFiltered": "(从 _MAX_ 条记录过滤)"
-				},
-				"searching": false,
-				"ordering": false,
-//				responsive: true,
-				scrollX:        true
-			});
-		})
-
-
-
-	</script>
-
-
+</div>
 </body>
 </html>
