--- a/house_info/list-table.html
+++ b/house_info/list-table.html
@@ -40,8 +40,6 @@
           href="../resources/dataTables/extensions/FixedHeader/css/fixedHeader.dataTables.css">
 
 
-
-
     <script type="text/javascript" src="../resources/js/jquery-1.10.1.min.js"></script>
     <script type="text/javascript" src="../resources/js/common.js"></script>
     <script type="text/javascript" src="../resources/layer/layer.js"></script>
@@ -59,14 +57,15 @@
     <nav class="navbar navbar-inverse" role="banner">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="sr-only">Toggle navigation</span> <span
+                        class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
                 <a class="navbar-brand" href="../index.html"><i class="fa fa-sun-o"></i> 我要查房</a></div>
             <div class="collapse navbar-collapse navbar-right">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="../index.html">主页</a></li>
-                    <li ><a href="../about.html">联系我们</a></li>
+                    <li><a href="../about.html">联系我们</a></li>
                     <li><a href="../house_info/list-table.html">有效房源</a></li>
-                    <li><a href="../portfolio.html">最新房源</a></li>
+                    <li><a href="../house_info/list-table.html?type=new">最新房源</a></li>
                     <li><a href="../pricing.html">物业查询</a></li>
                     <li><a href="../index.html#personal">个人中心</a></li>
                     <li>
