--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="./resources/tpgd/css/owl.theme.css" rel="stylesheet">
 
     <link href="./resources/layer/skin/layer.css" rel="stylesheet">
-    <link href='http://fonts.useso.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>
+    <!--<link href='http://fonts.useso.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>-->
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -104,8 +104,8 @@
                         充200送80
                         充300送120
                         充500送230
-                        充1000得2000<br/>
-                        最少充值金额50起充-</h3>
+                        充1000得2000
+                   </h3>
                     <!--<p><a href="portfolio.html" class="slider btn">View Portfolio</a> </p>-->
                 </div>
             </div>
@@ -206,26 +206,23 @@
 <section id="testimonials" class="text-center">
     <div class="container">
         <div class="center">
-            <h2>What Our Clients Say</h2>
+            <h2>我们的愿景与优势</h2>
             <hr>
         </div>
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <div id="testimonial" class="owl-carousel owl-theme">
                     <div class="item">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed
-                            dapibus leo nec ornare diam.</p>
-                        <p><strong>John DOE</strong>, CEO, Company.</p>
+                        <p>口袋中的海量房源，汇聚全城房源，随时掌握最新鲜的房源状态</p>
+                        <!--<p><strong>John DOE</strong>, 中介一.</p>-->
                     </div>
                     <div class="item">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed
-                            dapibus leo nec ornare diam.</p>
-                        <p><strong>Jenny DOE</strong>, CEO, Company.</p>
+                        <p>专为房产经纪人服务的房源共享平台</p>
+                        <!--<p><strong>Jenny DOE</strong>, 中介二.</p>-->
                     </div>
                     <div class="item">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed
-                            dapibus leo nec ornare diam.</p>
-                        <p><strong>John DOE</strong>, CEO, Company.</p>
+                        <p>不再人有我无,为成交提速	</p>
+                        <!--<p><strong>John DOE</strong>, CEO, Company.</p>-->
                     </div>
                 </div>
             </div>
@@ -237,10 +234,10 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h2>Want to discuss a project?</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget nisl vel justo suscipit ullamcorper sed at lacus.<br>
-                    Aliquam euismod nunc id eros sollicitudin interdum.</p>
-                <a href="contact.html" class="btn btn-primary">Contact us</a></div>
+                <!--<h2>Want to discuss a project?</h2>-->
+                <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget nisl vel justo suscipit ullamcorper sed at lacus.<br>-->
+                    <!--Aliquam euismod nunc id eros sollicitudin interdum.</p>-->
+                <a href="contact.html" class="btn btn-primary">联系我们</a></div>
         </div>
     </div>
 </section>
