表单重置按钮、退出修复、个人中心登录判断

--- a/house_info/list-table.html
+++ b/house_info/list-table.html
@@ -155,7 +155,7 @@
                     <tr>
                         <th colspan="2" class="tool_box">
                             <button class="btn btn-primary btn-sm" type="button" id="searchHouseInfo">查&nbsp;询</button>
-                            <button class="btn btn-info btn-sm" type="button">重&nbsp;置</button>
+                            <button class="btn btn-info btn-sm" type="button" id="resetBtn">重&nbsp;置</button>
                         </th>
                     </tr>
                 </table>
