--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <div class="recent-work-inner">
                             <h3><a href="#">充值</a></h3>
                             <p>目前，我们暂提供微信充值方式。</p>
-                            <a class="preview " href="finance/rechargeV2.html"  title="充值">
+                            <a class="preview recharge" href="javascript:void(0);"  title="充值">
                                 <i class="fa fa-search"></i> 查看</a>
                         </div>
                     </div>
@@ -180,9 +180,9 @@
                 <div class="recent-work-wrap"><img class="img-responsive" src="./resources/tpgd/images/portfolio/small/item2.jpg" alt="">
                     <div class="overlay">
                         <div class="recent-work-inner">
-                            <h3><a href="#"> 充值记录</a></h3>
+                            <h3><a href="#">充值记录</a></h3>
                             <p>您在我要查房的所有充值的记录.</p>
-                            <a class="preview " href="finance/recharge_all.html" ><i class="fa fa-search"></i> 查看</a></div>
+                            <a class="preview rechargeAll" href="javascript:void(0);" ><i class="fa fa-search"></i> 查看</a></div>
                     </div>
                 </div>
             </div>
@@ -194,7 +194,7 @@
                         <div class="recent-work-inner">
                             <h3><a href="#">消费记录</a></h3>
                             <p>您在我要查房的所有查看的房源记录.</p>
-                            <a class="preview rechargeAll" href="javascript:void(0);" rel="prettyPhoto"><i class="fa fa-search"></i> 查看</a></div>
+                            <a class="preview expense" href="javascript:void(0);" rel="prettyPhoto"><i class="fa fa-search"></i> 查看</a></div>
                     </div>
                 </div>
             </div>
@@ -237,7 +237,7 @@
                 <!--<h2>Want to discuss a project?</h2>-->
                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget nisl vel justo suscipit ullamcorper sed at lacus.<br>-->
                     <!--Aliquam euismod nunc id eros sollicitudin interdum.</p>-->
-                <a href="contact.html" class="btn btn-primary">联系我们</a></div>
+                <a href="about.html" class="btn btn-primary">联系我们</a></div>
         </div>
     </div>
 </section>
