删除一些无效文件

--- a/common/head.html
+++ b/common/head.html
@@ -22,7 +22,6 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-
     <script src="resources/js/common.js"></script>
     <script src="resources/js/common/head.js"></script>
     <script src="resources/js/jquery-1.10.1.min.js"></script>
@@ -33,10 +32,6 @@
     <script type="text/javascript" src="resources/tpgd/js/main.js"></script>
     <script type="text/javascript" src="resources/layer/layer.js"></script>
 
-    <script>
-
-    </script>
-
 </head>
 
 <body class="homepage">
@@ -45,15 +40,16 @@
     <nav class="navbar navbar-inverse" role="banner">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="sr-only">Toggle navigation</span> <span
+                        class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
                 <a class="navbar-brand" href="index.html"><i class="fa fa-sun-o"></i> 我要查房</a></div>
             <div class="collapse navbar-collapse navbar-right">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="index.html">主页</a></li>
-                    <li ><a href="about.html">联系我们</a></li>
+                    <li><a href="about.html">联系我们</a></li>
                     <li><a href="house_info/list-table.html">有效房源</a></li>
                     <li><a href="house_info/list-table.html?type=new">最新房源</a></li>
-                    <li><a href="pricing.html">物业查询</a></li>
+                    <li><a href="house_info/property.html">物业查询</a></li>
                     <li><a href="index.html#personal">个人中心</a></li>
                     <li>
                         <div class="part1" style="display:none ">
