--- a/finance/recharge_all.html
+++ b/finance/recharge_all.html
@@ -31,7 +31,7 @@
     <script type="text/javascript" src="../resources/dataTables/media/js/jquery.dataTables.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../resources/dataTables/media/css/jquery.dataTables.min.css">
 
-    <script type="text/javascript" src="../resources/js/finance/rechargeList.js"></script>
+    <script type="text/javascript" src="../resources/js/finance/rechargeList.js?time=new Date()"></script>
 </head>
 <body>
 
@@ -48,7 +48,7 @@
                     <li><a href="../about.html">联系我们</a></li>
                     <li><a href="../house_info/list-table.html">有效房源</a></li>
                     <li><a href="../house_info/list-table.html?type=new">最新房源</a></li>
-                    <li><a href="../pricing.html">物业查询</a></li>
+                    <li><a href="../house_info/property.html">物业查询</a></li>
                     <li><a href="../index.html#personal">个人中心</a></li>
                     <li>
                         <div class="part1" style="display:none ">
