--- a/house_info/list-table.html
+++ b/house_info/list-table.html
@@ -23,8 +23,8 @@
     <![endif]-->
 
     <script src="../resources/js/jquery-1.10.1.min.js"></script>
-    <script src="../resources/js/common.js"></script>
-    <script src="../resources/js/common/head.js"></script>
+    <script src="../resources/js/common.js?time=new Date()"></script>
+    <script src="../resources/js/common/head.js?time=new Date()"></script>
 
     <script type="text/javascript" src="../resources/tpgd/js/bootstrap.min.js"></script>
     <!--<script type="text/javascript" src="../resources/tpgd/js/jquery.prettyPhoto.js"></script>-->
@@ -47,7 +47,7 @@
     <script type="text/javascript" src="../resources/dataTables/media/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript"
             src="../resources/dataTables/extensions/FixedHeader/js/dataTables.fixedHeader.min.js"></script>
-    <script type="text/javascript" src="../resources/js/list-table.js"></script>
+    <script type="text/javascript" src="../resources/js/list-table.js?time=new Date()"></script>
 
 </head>
 <body>
@@ -65,7 +65,7 @@
                     <li><a href="../about.html">联系我们</a></li>
                     <li><a href="../house_info/list-table.html">有效房源</a></li>
                     <li><a href="../house_info/list-table.html?type=new">最新房源</a></li>
-                    <li><a href="../pricing.html">物业查询</a></li>
+                    <li><a href="property.html">物业查询</a></li>
                     <li><a href="../index.html#personal">个人中心</a></li>
                     <li>
                         <div class="part1" style="display:none ">
