--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <script type="text/javascript" src="./resources/tpgd/js/owl.carousel.js"></script>
     <script type="text/javascript" src="./resources/tpgd/js/main.js"></script>
     <script type="text/javascript" src="./resources/layer/layer.js"></script>
-    <script type="text/javascript" src="./resources/js/index.js"></script>
+
+    <script type="text/javascript" src="./resources/js/index.js?time=new Date()"></script>
 </head>
 
 <body class="homepage">
@@ -51,7 +52,7 @@
                     <li><a href="about.html">联系我们</a></li>
                     <li><a href="house_info/list-table.html">有效房源</a></li>
                     <li><a href="house_info/list-table.html?type=new">最新房源</a></li>
-                    <li><a href="pricing.html">物业查询</a></li>
+                    <li><a href="house_info/property.html">物业查询</a></li>
                     <li><a href="#personal">个人中心</a></li>
                     <li>
                         <div class="part1" style="display:none ">
