--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
     <script src="resources/detailAdmin/js/bootstrap.min.js"></script>
     <script src="resources/detailAdmin/js/theme.js"></script>
     <script type="text/javascript" src="resources/layer/layer.js"></script>
-    <script type="text/javascript" src="resources/js/login.js"></script>
+    <script type="text/javascript" src="resources/js/login.js?time=new Date()"></script>
     <style>
         .navbar-inverse .navbar-nav > li a {
             height: 35px;
