--- a/register.html
+++ b/register.html
@@ -44,8 +44,9 @@
 	<script src="resources/js/common.js"></script>
 	<script src="resources/detailAdmin/js/bootstrap.min.js"></script>
 	<script src="resources/detailAdmin/js/theme.js"></script>
-	<script type="text/javascript" src="./resources/js/register.js"></script>
 	<script type="text/javascript" src="./resources/layer/layer.js"></script>
+	
+	<script type="text/javascript" src="./resources/js/register.js?time=new Date()"></script>
 </head>
 <body>
 
