--- a/about.html
+++ b/about.html
@@ -1,159 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>我要查房</title>
-  <meta name="description" content="">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>我要查房</title>
+    <meta name="description" content="">
 
-  <!-- core CSS -->
-  <link href="./resources/tpgd/css/bootstrap.min.css" rel="stylesheet">
-  <link href="./resources/tpgd/css/font-awesome.min.css" rel="stylesheet">
-  <link href="./resources/tpgd/css/prettyPhoto.css" rel="stylesheet">
-  <link href="./resources/tpgd/css/main.css" rel="stylesheet">
-  <link href="./resources/tpgd/css/responsive.css" rel="stylesheet">
-  <link href="./resources/tpgd/css/owl.carousel.css" rel="stylesheet">
-  <link href="./resources/tpgd/css/owl.theme.css" rel="stylesheet">
+    <!-- core CSS -->
+    <link href="./resources/tpgd/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./resources/tpgd/css/font-awesome.min.css" rel="stylesheet">
+    <link href="./resources/tpgd/css/prettyPhoto.css" rel="stylesheet">
+    <link href="./resources/tpgd/css/main.css" rel="stylesheet">
+    <link href="./resources/tpgd/css/responsive.css" rel="stylesheet">
+    <link href="./resources/tpgd/css/owl.carousel.css" rel="stylesheet">
+    <link href="./resources/tpgd/css/owl.theme.css" rel="stylesheet">
 
-  <link href="./resources/layer/skin/layer.css" rel="stylesheet">
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
+    <link href="./resources/layer/skin/layer.css" rel="stylesheet">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
-  <script src="./resources/js/jquery-1.10.1.min.js"></script>
-  <script src="./resources/js/common.js"></script>
-  <script src="./resources/js/common/head.js"></script>
+    <script src="./resources/js/jquery-1.10.1.min.js"></script>
+    <script src="./resources/js/common.js"></script>
+    <script src="./resources/js/common/head.js"></script>
 
-  <script type="text/javascript" src="./resources/tpgd/js/bootstrap.min.js"></script>
-  <!--<script type="text/javascript" src="./resources/tpgd/js/jquery.prettyPhoto.js"></script>-->
-  <script type="text/javascript" src="./resources/tpgd/js/jquery.isotope.min.js"></script>
-  <script type="text/javascript" src="./resources/tpgd/js/owl.carousel.js"></script>
-  <script type="text/javascript" src="./resources/tpgd/js/main.js"></script>
-  <script type="text/javascript" src="./resources/layer/layer.js"></script>
-  <script type="text/javascript" src="./resources/js/index.js"></script>
-  <!--<base href="/">-->
+    <script type="text/javascript" src="./resources/tpgd/js/bootstrap.min.js"></script>
+    <!--<script type="text/javascript" src="./resources/tpgd/js/jquery.prettyPhoto.js"></script>-->
+    <script type="text/javascript" src="./resources/tpgd/js/jquery.isotope.min.js"></script>
+    <script type="text/javascript" src="./resources/tpgd/js/owl.carousel.js"></script>
+    <script type="text/javascript" src="./resources/tpgd/js/main.js"></script>
+    <script type="text/javascript" src="./resources/layer/layer.js"></script>
+    <script type="text/javascript" src="./resources/js/index.js"></script>
+    <!--<base href="/">-->
 </head>
 
 <body class="homepage">
 
 <div id="divID" style="width:100%; height: 74px;"></div>
 <script>
-  $("#divID").load("common/head.html");
+    $("#divID").load("common/head.html");
 </script>
 
 <div id="inner-page">
-  <div class="top-center">
-    <h2>关于我们</h2>
-    <p class="lead">提高行业效率,降低行业房源成本，最新最快房源系统,打破行业信息壁垒,。行业共享平台,真房源，新房源，全部房源都有！客户不愁~</p>
-  </div>
-  <div class="container">
-    <div class="about-us">
-      <div class="row">
-
-        <div class="col-md-4 col-sm-6"><img src="./resources/tpgd/images/about.jpg" class="img-responsive" alt=""/> </div>
-        <div class="col-md-4 col-sm-6">
-          <h3>我们的愿景</h3>
-          <p>我要查房为提升房源开发效率，建立全行业房源共享而建立的平台！
-            解决在二手房行业，房源不齐全这一个难题而生！加速提升全行业服务水平，让房地产经纪人能轻松实现房源开拓！</p>
-          <p>We want to improve the development efficiency of real estate, built the whole industry and the establishment of the platform Sharing of Housing Information!
-            Accelerate the whole industry to enhance the level of service, so that real estate agents can easily achieve the housing development!</p>
-        </div>
-        <div class="col-md-4 col-sm-6">
-          <h3>客服微信</h3>
-
-          <div class="col-md-6 col-sm-8"><img src="resources/images/recharge.jpg" class="img-responsive" alt=""/> </div>
-
-          <p style="position: relative;top: 20px;"><strong>微信号:</strong><br>
-            chafang51</p>
-        </div>
-      </div>
+    <div class="top-center">
+        <h2>关于我们</h2>
+        <p class="lead">提高行业效率,降低行业房源成本，最新最快房源系统,打破行业信息壁垒,。行业共享平台,真房源，新房源，全部房源都有！客户不愁~</p>
     </div>
-  </div>
+    <div class="container">
+        <div class="about-us">
+            <div class="row">
+
+                <div class="col-md-4 col-sm-6"><img src="./resources/tpgd/images/about.jpg" class="img-responsive" alt=""/></div>
+                <div class="col-md-4 col-sm-6">
+                    <h3>我们的愿景</h3>
+                    <p>我要查房为提升房源开发效率，建立全行业房源共享而建立的平台！
+                        解决在二手房行业，房源不齐全这一个难题而生！加速提升全行业服务水平，让房地产经纪人能轻松实现房源开拓！</p>
+                    <p>We want to improve the development efficiency of real estate, built the whole industry and the establishment of the platform Sharing of Housing Information!
+                        Accelerate the whole industry to enhance the level of service, so that real estate agents can easily achieve the housing development!</p>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <h3>客服微信</h3>
+
+                    <div class="col-md-6 col-sm-8"><img src="resources/images/recharge.jpg" class="img-responsive" alt=""/></div>
+
+                    <p style="position: relative;top: 20px;"><strong>微信号:</strong><br>
+                        chafang51</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <section id="middle">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6">
-        <h3>Some Facts About Us</h3>
-        <br>
-        <div class="media"> <i class="fa fa-smile-o pull-left fa-3x"></i>
-          <div class="media-body">
-            <h3 class="media-heading"> 120+ Happy Clients </h3>
-            Etiam eget nisl vel justo suscipit ullamcorper sed at lacus.</div>
-        </div>
-        <br>
-        <div class="media"> <i class="fa fa-check-square-o pull-left fa-3x"></i>
-          <div class="media-body">
-            <h3 class="media-heading"> 600+ Projects Completed </h3>
-            Sed scelerisque nunc quis est efficitur dictum vivamus commodo.</div>
-        </div>
-        <br>
-        <div class="media"> <i class="fa fa-trophy pull-left fa-3x"></i>
-          <div class="media-body">
-            <h3 class="media-heading"> 25 Awards Won </h3>
-            Pellentesque hendrerit arcu luctus facilisis erat consectetur.</div>
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="accordion">
-          <h3>Questions & Answers</h3>
-          <br>
-          <div class="panel-group" id="accordion1">
-            <div class="panel panel-default">
-              <div class="panel-heading active">
-                <h3 class="panel-title"> <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseOne1"> Vivamus commodo nisi risus? <i class="fa fa-angle-right pull-right"></i> </a> </h3>
-              </div>
-              <div id="collapseOne1" class="panel-collapse collapse in">
-                <div class="panel-body">
-                  <div class="media accordion-inner">
-                    <div class="media-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget nisl vel justo suscipit ullamcorper sed at lacus. Aliquam euismod nunc id eros sollicitudin interdum. Integer eget sem nec nulla dictum dictum. </div>
-                  </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h3>Some Facts About Us</h3>
+                <br>
+                <div class="media"><i class="fa fa-smile-o pull-left fa-3x"></i>
+                    <div class="media-body">
+                        <h3 class="media-heading"> 120+ Happy Clients </h3>
+                        Etiam eget nisl vel justo suscipit ullamcorper sed at lacus.
+                    </div>
                 </div>
-              </div>
+                <br>
+                <div class="media"><i class="fa fa-check-square-o pull-left fa-3x"></i>
+                    <div class="media-body">
+                        <h3 class="media-heading"> 600+ Projects Completed </h3>
+                        Sed scelerisque nunc quis est efficitur dictum vivamus commodo.
+                    </div>
+                </div>
+                <br>
+                <div class="media"><i class="fa fa-trophy pull-left fa-3x"></i>
+                    <div class="media-body">
+                        <h3 class="media-heading"> 25 Awards Won </h3>
+                        Pellentesque hendrerit arcu luctus facilisis erat consectetur.
+                    </div>
+                </div>
             </div>
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h3 class="panel-title"> <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo1"> Etiam eget vel justo suscipit ullamcorpe? <i class="fa fa-angle-right pull-right"></i> </a> </h3>
-              </div>
-              <div id="collapseTwo1" class="panel-collapse collapse">
-                <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget nisl vel justo suscipit ullamcorper sed at lacus. Aliquam euismod nunc id eros sollicitudin interdum. Integer eget sem nec nulla dictum dictum. </div>
-              </div>
+            <div class="col-sm-6">
+                <div class="accordion">
+                    <h3>Questions & Answers</h3>
+                    <br>
+                    <div class="panel-group" id="accordion1">
+                        <div class="panel panel-default">
+                            <div class="panel-heading active">
+                                <h3 class="panel-title"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseOne1"> Vivamus commodo nisi risus? <i
+                                        class="fa fa-angle-right pull-right"></i> </a></h3>
+                            </div>
+                            <div id="collapseOne1" class="panel-collapse collapse in">
+                                <div class="panel-body">
+                                    <div class="media accordion-inner">
+                                        <div class="media-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget nisl vel justo suscipit ullamcorper sed at lacus. Aliquam
+                                            euismod nunc id eros sollicitudin interdum. Integer eget sem nec nulla dictum dictum.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo1"> Etiam eget vel justo suscipit
+                                    ullamcorpe? <i class="fa fa-angle-right pull-right"></i> </a></h3>
+                            </div>
+                            <div id="collapseTwo1" class="panel-collapse collapse">
+                                <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget nisl vel justo suscipit ullamcorper sed at lacus. Aliquam euismod
+                                    nunc id eros sollicitudin interdum. Integer eget sem nec nulla dictum dictum.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseThree1"> Integer eget sem nec nulla dictum
+                                    dictum? <i class="fa fa-angle-right pull-right"></i> </a></h3>
+                            </div>
+                            <div id="collapseThree1" class="panel-collapse collapse">
+                                <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget nisl vel justo suscipit ullamcorper sed at lacus. Aliquam euismod
+                                    nunc id eros sollicitudin interdum. Integer eget sem nec nulla dictum dictum.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseFour1"> Maecenas tincidunt venenatis
+                                    tempus? <i class="fa fa-angle-right pull-right"></i> </a></h3>
+                            </div>
+                            <div id="collapseFour1" class="panel-collapse collapse">
+                                <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget nisl vel justo suscipit ullamcorper sed at lacus. Aliquam euismod
+                                    nunc id eros sollicitudin interdum. Integer eget sem nec nulla dictum dictum.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h3 class="panel-title"> <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseThree1"> Integer eget sem nec nulla dictum dictum? <i class="fa fa-angle-right pull-right"></i> </a> </h3>
-              </div>
-              <div id="collapseThree1" class="panel-collapse collapse">
-                <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget nisl vel justo suscipit ullamcorper sed at lacus. Aliquam euismod nunc id eros sollicitudin interdum. Integer eget sem nec nulla dictum dictum. </div>
-              </div>
-            </div>
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h3 class="panel-title"> <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseFour1"> Maecenas tincidunt venenatis tempus? <i class="fa fa-angle-right pull-right"></i> </a> </h3>
-              </div>
-              <div id="collapseFour1" class="panel-collapse collapse">
-                <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget nisl vel justo suscipit ullamcorper sed at lacus. Aliquam euismod nunc id eros sollicitudin interdum. Integer eget sem nec nulla dictum dictum. </div>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
 
 </section>
 
 <footer id="footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6">Copyright &copy; 2016 我要查房.  </div>
-      <div class="col-sm-6">
-        <div class="follow-us"> <a class="fa fa-facebook social-icon" href="#"></a> <a class="fa fa-twitter social-icon" href="#"></a> <a class="fa fa-linkedin social-icon" href="#"></a> <a class="fa fa-google-plus social-icon" href="#"></a> </div>
-      </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">Copyright &copy; 2016 我要查房.</div>
+            <div class="col-sm-6">
+                <div class="follow-us"><a class="fa fa-facebook social-icon" href="#"></a> <a class="fa fa-twitter social-icon" href="#"></a> <a class="fa fa-linkedin social-icon"
+                                                                                                                                                 href="#"></a> <a
+                        class="fa fa-google-plus social-icon" href="#"></a></div>
+            </div>
+        </div>
     </div>
-  </div>
 </footer>
 
 </body>
