--- a/finance/rechargeV2.html
+++ b/finance/rechargeV2.html
@@ -22,7 +22,7 @@
 
 	<script src="../resources/js/jquery-1.10.1.min.js"></script>
 	<script src="../resources/js/common.js"></script>
-	<script src="../resources/js/common/head.js"></script>
+	<script src="../resources/js/common/head.js?time=new Date()"></script>
 
 	<script type="text/javascript" src="../resources/tpgd/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="../resources/tpgd/js/jquery.isotope.min.js"></script>
@@ -30,7 +30,7 @@
 	<script type="text/javascript" src="../resources/tpgd/js/main.js"></script>
 	<script type="text/javascript" src="../resources/layer/layer.js"></script>
 	<script type="text/javascript" src="../resources/js/validate/jquery.validate.min.js"></script>
-<script type="text/javascript" src="../resources/js/finance/recharge.js"></script>
+<script type="text/javascript" src="../resources/js/finance/recharge.js?time=new Date()"></script>
 
 </head>
 <body>
@@ -47,7 +47,7 @@
 						<li><a href="../about.html">联系我们</a></li>
 						<li><a href="../house_info/list-table.html">有效房源</a></li>
 						<li><a href="../house_info/list-table.html?type=new">最新房源</a></li>
-						<li><a href="../pricing.html">物业查询</a></li>
+						<li><a href="../house_info/property.html">物业查询</a></li>
 						<li><a href="../index.html#personal">个人中心</a></li>
 						<li>
 							<div class="part1" style="display:none ">
