--- a/house_info/my_query.html
+++ b/house_info/my_query.html
@@ -66,7 +66,7 @@
                     <li ><a href="../about.html">联系我们</a></li>
                     <li><a href="../house_info/list-table.html">有效房源</a></li>
                     <li><a href="../house_info/list-table.html?type=new">最新房源</a></li>
-                    <li><a href="../pricing.html">物业查询</a></li>
+                    <li><a href="property.html">物业查询</a></li>
                     <li><a href="../index.html#personal">个人中心</a></li>
                     <li>
                         <div class="part1" style="display:none ">
