--- a/finance/expense.html
+++ b/finance/expense.html
@@ -40,6 +40,7 @@
     <script type="text/javascript" src="../resources/js/common.js"></script>
     <script type="text/javascript" src="../resources/layer/layer.js"></script>
     <script type="text/javascript" src="../resources/js/jquery.lSelect.js"></script>
+    <script type="text/javascript" src="../resources/js/Calendar.js"></script>
 
     <script type="text/javascript" src="../resources/dataTables/media/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript"
