最新房源问题修复、消费记录查看

--- a/finance/expense.html
+++ b/finance/expense.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>大公盘</title>
+    <title>我要查房</title>
     <!-- core CSS -->
     <!--<link href="../resources/tpgd/css/bootstrap.min.css" rel="stylesheet">-->
     <link rel="stylesheet" type="text/css" href="../resources/bootstrap-3.3.5/css/bootstrap.min.css">
@@ -151,6 +151,7 @@
                         <tr>
                             <th>时间</th>
                             <th>类型</th>
+                            <th>房源类型</th>
                             <th>金额</th>
                             <!--<th>可用余额</th>-->
                             <th>详情</th>
@@ -159,6 +160,8 @@
                         <tbody>
                         </tbody>
                     </table>
+
+
                 </div>
             </div>
         </div>
