--- a/finance/rechargeV2.html
+++ b/finance/rechargeV2.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>大公盘</title>
+<title>我要查房</title>
 
 	<!-- core CSS -->
 	<link href="../resources/tpgd/css/bootstrap.min.css" rel="stylesheet">
